# maco

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  sandbox-image.yml
docs/: mcp-config.md
examples/serve-mcp/: README.md  mcp-client.json  mcp.json
images/sandbox/: Dockerfile  README.md
scripts/: maco-gen  maco-run  maco-serve  maco-serve-mcp  package-version  write-build-info
src/maco/: __init__.py  _build_info.py  cli.py  codegen.py  config.py  gateway.py  mcp_manager.py  oauth.py  runner.py  serve_mcp.py  service.py  service_identity.py  version.py
src/maco/sandbox/: __init__.py  core.py
src/maco/sandbox/providers/: __init__.py  base.py  docker.py  local.py  matchlock.py
src/maco/templates/: bash_description.j2  code_execute_description.j2  serve_mcp_instructions.j2  server_catalog.j2
src/maco/templates/codegen/: client.py.j2  model.py.j2  package_init.py.j2  pyproject.toml.j2  root_model.py.j2  server_init.py.j2  tool.py.j2  type_alias.py.j2
tests/: test_codegen.py  test_config.py  test_integration.py
tests/fixtures/: echo_mcp_server.py
tests/integration/: test_integration.py  test_sandbox_integration.py  test_serve_mcp.py
tests/unit/: test_cli.py  test_codegen.py  test_config.py  test_examples.py  test_gateway.py  test_mcp_oauth.py  test_oauth.py  test_runner.py  test_sandbox_providers.py  test_serve_mcp_unit.py  test_service.py
