[project]
name = "mcp-as-code"
dynamic = ["version"]
description = "Execute MCP tools through generated Python code interfaces"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "matchlock==0.2.15",
    "mcp>=1.24.0",
    "pydantic>=2.0",
]

[project.scripts]
maco = "maco.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.14.0",
    "ty>=0.0.35",
]

[tool.hatch.version]
path = "src/maco/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/maco"]

[tool.hatch.build.targets.sdist]
include = [
    "src/maco",
    "docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
